# Influencer_Discovery_Engine

./: .env.example  .gitignore  API_INTEGRATION.md  COMPLETION_CHECKLIST.md  DEPLOYMENT_FIX.md  DEPLOYMENT_GUIDE.md  FILES_CREATED.md  FRONTEND_COMPLETE.md  FRONTEND_INDEX.md  FRONTEND_README.md  FRONTEND_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SETUP.md  analyze.py  api.py  app.py  ingest.py  next.config.js  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.ts  tsconfig.json  vercel.json
.claude/: gsd-file-manifest.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/search/: page.tsx
components/: creator-card.tsx  search-bar.tsx
frontend/: .gitignore  BUILD.md  DELIVERED.txt  FEATURES.md  QUICK_START.md  README.md  START_HERE.md  VISUAL_GUIDE.md  index.html  install-and-start.sh  package.json  start-dev.js  tailwind.config.js  tsconfig.app.json  tsconfig.json
lib/: api.ts  hooks.ts
src/: main.py
tests/: test_academic.py  test_analysis_cli.py  test_api.py  test_blog_scraper.py  test_chunking.py  test_cleaning.py  test_cli.py  test_db.py  test_db_briefing.py  test_db_vector.py  test_nlp.py  test_openai_api.py  test_scoring.py  test_search_api.py  test_social_media.py  test_transcript_api.py  test_youtube_api.py
(+82 files in other folders)
