[project]
name = "influencer-discovery-engine"
version = "0.3.0"
description = "API for discovering and analyzing influencers aligned with advocacy topics."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "httpx==0.25.2",
    "python-dateutil==2.8.2",
    "aiohttp==3.9.1",
    "beautifulsoup4==4.12.2",
    "feedparser==6.0.10",
    "yt-dlp==2023.12.30",
    "youtube-transcript-api==0.6.1",
]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "ruff==0.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
