[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "influencer-discovery-engine"
version = "0.3.0"
description = "API for discovering and analyzing influencers aligned with advocacy topics"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "google-generativeai>=0.3.0",
    "youtube-research-python>=1.0.7",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.poetry]
# For Vercel deployment - tells Vercel how to run the FastAPI app
app = "src.api.main:app"
